test/Feature/Output/ubsan_signed_overflow.c.tmp.klee-out/test000002.overflow.err
Error: overflow on unsigned subtraction
File: /home/sanghu/TracerX/tracerx/test/Feature/ubsan_signed_overflow.c
Line: 23
assembly.ll line: 76
Stack: 
	#000000076 in main () at /home/sanghu/TracerX/tracerx/test/Feature/ubsan_signed_overflow.c:23
