test/Feature/Output/ubsan_signed_overflow.c.tmp.klee-out/test000002.pc
array x[4] : w32 -> w8 = symbolic
array y[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Slt 2147483647
                  N0:(Add w64 N1:(SExt w64 (ReadLSB w32 0 x))
                              N2:(SExt w64 (ReadLSB w32 0 y)))))
         (Eq false (Slt N0 18446744071562067968))
         (Eq false
             (And (Eq false
                      (Slt 2147483647 N3:(Sub w64 N1 N2)))
                  (Eq false (Slt N3 18446744071562067968))))]
        false)
